# homework1-test

./: .gitignore  CMakeLists.txt  README.md  README.txt  need.md  run_all.bat
data/: appointment_cert_dataset.jsonl
docs/: 准确度测评报告.md  性能测评报告.md  技术总结.md  编译说明.md
launcher/: main.c
tests/: accuracy_eval.py  gen_appointment_dataset.py  perf_smoke_test.py
